<resources>
    <string name="app_name">Administrador de centros</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_map_api_key">AIzaSyBpZbzGPNt3m0NsxVrRpHz3CLJo8VqVjvw</string>
    <string name="contrasena">Contrasena</string>
    <string name="fgc_administrador_de_centros">FGC - Administrador de centros</string>
    <string name="ingresar">Ingresar</string>
    <string name="correo">Correo</string>
    <string name="todo">TODO</string>
    <string name="add">Add</string>
    <string name="navigate">Navigate</string>
    <string name="profile">Profile</string>
    <string name="nombre">Nombre</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="tel_fono">Teléfono</string>
    <string name="se_aceptan">Se aceptan:</string>
    <string name="categor_as">Categorías:</string>
    <string name="nuevo_centro">Nuevo centro</string>
    <string name="correo_dominio_com">correo@dominio.com</string>
    <string name="nuevo_administrador">Nuevo administrador</string>
    <string name="administrar_cuentas">Administrar cuentas</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="filtrar_por_categor_a">Filtrar por categoría</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="confirma_nueva_contrase_a">Confirma nueva contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="est_s_seguro_esta_acci_n_no_se_puede_deshacer">¿Estás seguro? Esta acción no se puede deshacer</string>
    <string name="seleccione_un_archivo">Seleccione un archivo</string>
    <string name="ingresa_un_nombre">Ingresa un nombre</string>
    <string name="ingresa_el_n_mero_de_tel">Ingresa el número de tel.</string>
    <string name="imagen">Imagen</string>
    <string name="ingresa_la_direcci_n">Ingresa la dirección</string>
    <string name="materiales_aceptados">Materiales aceptados:</string>
    <string name="seleccionar_ubicaci_n">Seleccionar ubicación</string>
    <string name="direcci_n">Dirección</string>
    <string name="latitud">Latitud</string>
    <string name="ingresa_la_latitud">Ingresa la latitud</string>
    <string name="longitud">Longitud</string>
    <string name="d_as_abierto">Días abierto</string>
    <string name="hora_apertura">Hora apertura</string>
    <string name="hora_cierre">Hora cierre</string>
    <string name="ingresa_la_longitud">Ingresa la longitud</string>
    <string name="selecciona_los_dias">Selecciona los dias</string>
    <string name="seleccione_un_horario">Seleccione un horario</string>
    <string name="guardar">Guardar</string>
    <string name="seleccionar_imagen">Seleccionar imagen</string>
    <string name="cuentas_de_administradores">Cuentas de administradores</string>
    <string name="administador_de_centros_green_carson">Administador de centros Green Carson</string>
    <string name="a_adir_centro">Añadir centro</string>
    <string name="navegaci_n">Navegación</string>
    <string name="cuenta">Cuenta</string>
    <string name="apellidos">Apellidos</string>
    <string name="ingresa_el_nombre">Ingresa el nombre</string>
    <string name="ingresa_los_apellidos">Ingresa los apellidos</string>
    <string name="ingresa_el_correo">Ingresa el correo</string>
    <string name="confirma_contrase_a">Confirma contraseña</string>
    <string name="centrar_en_mi_ubicaci_n">Centrar en mi ubicación</string>
    <string name="crear_nuevo_administrador">Crear nuevo administrador</string>
    <string name="ingresa_tus_apellidos">Ingresa tus apellidos</string>
    <string name="cambiar_vista">Cambiar vista</string>
    <string name="confirmar_ubicaci_n">Confirmar ubicación</string>
    <string name="categoria_centro">Centro de %1$s</string>
    <string name="Actualizar">Actualizar</string>
    <string name="regresar">Regresar</string>
    <string name="editar_centro">Editar centro</string>
    <string name="eliminar_centro">Eliminar centro</string>
    <string-array name="dias">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>
    <string-array name="materials">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>