<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/navigate"
        android:icon="@drawable/baseline_navigation_24"
        android:id="@+id/navigation"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/add"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:id="@+id/addCenter"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_outline_24"
        android:id="@+id/profile"/>
</menu>