<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ProfileFragment">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/BodyContainer"
            app:shapeAppearanceOverlay="@style/MyCardView"
            app:cardPreventCornerOverlap="false"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:strokeWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fondo">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/mi_cuenta"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/editCorreoProfile"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/text_field_container"
                    android:drawableStart="@drawable/user_addcenter"
                    android:hint="@string/correo_dominio_com"
                    android:enabled="false"
                    android:inputType="none"
                    android:paddingStart="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/textViewContrasena"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNombre"
                    tools:ignore="RtlSymmetry,TextContrastCheck" />

                <TextView
                    android:id="@+id/textViewNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/correo"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/editCorreoProfile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <EditText
                    android:id="@+id/editContrasenaProfile"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_field_container"


                    android:drawableStart="@drawable/baseline_lock_24"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/textViewNuevaContrasena"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewContrasena"
                    tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextContrastCheck"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/textViewNuevaContrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/nueva_contrase_a"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/editNuevaContrasenaProfile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editContrasenaProfile"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/editNuevaContrasenaProfile"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_field_container"


                    android:drawableStart="@drawable/baseline_lock_24"
                    android:hint="@string/nueva_contrase_a"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/textViewConfirmaContrasena"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNuevaContrasena"
                    tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/textViewConfirmaContrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/confirma_nueva_contrase_a"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/editConfirmaContrasenaProfile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editNuevaContrasenaProfile"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/editConfirmaContrasenaProfile"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/text_field_container"

                    android:drawableStart="@drawable/baseline_lock_24"


                    android:hint="@string/nueva_contrase_a"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewConfirmaContrasena"
                    tools:ignore="RtlSymmetry,TextContrastCheck" />

                <TextView
                    android:id="@+id/textViewContrasena"
                    android:layout_width="75dp"
                    android:layout_height="19dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/contrase_a"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/editContrasenaProfile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editCorreoProfile"
                    tools:ignore="TextSizeCheck,TextContrastCheck" />

                <Button
                    android:id="@+id/guardarProfile"
                    style="@style/Button.green"
                    android:layout_width="189dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/guardar_cambios"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editConfirmaContrasenaProfile" />

                <Button
                    android:id="@+id/administrarCuentas"
                    style="@style/Button.green"
                    android:layout_width="189dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/administrar_cuentas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cerrarSesion"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/cerrarSesion"
                    style="@style/Button.white"
                    android:layout_width="189dp"
                    android:layout_height="48dp"
                    android:text="@string/cerrar_sesi_n"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guardarProfile"
                    tools:ignore="TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>